fixed spacing issue on h1 elem

--- a/styles/main.css
+++ b/styles/main.css
@@ -69,6 +69,7 @@ main h1 {
 	padding: .3em 0;
 	border-top: 3px solid #931420;
 	border-bottom: 3px solid #931420;
+	margin-bottom: 1em;
 }
 
 main h2 {
